[package]
name = "weave"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.12"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.1"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
